# opencaselist-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
